--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,11 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    env: # 在这里定义环境变量
+      USER_NAME: alooooha
+      IP: 60.188.247.209
+      SSH_PRIVATE_KEY: ${{ secrets.tianyiyunKey }} // 私匙
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
