--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,10 @@ jobs:
       - name: Install dependencies
         run: npm install
   
+        - name: Verify Hexo installation
+        run: |
+          npx hexo --version
+
       - name: Build static site
         run: |
           npx hexo generate
