--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,10 @@ jobs:
           echo "secrets.aloooohaKey: ${{ secrets.aloooohaKey }}"
           echo "-----------------------------------------------"
           ls ./
+          echo "-----------------------------------------------"
+          ls ~/
+          echo "-----------------------------------------------"
+          ls ~/.ssh
 
       - name: 部署到天翼云
         run: |
