--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
     env: # 在这里定义环境变量
       USER_NAME: gituser
       IP: 60.188.247.209
-      SSH_PRIVATE_KEY: ${{ secrets.gituserKey }} // 私匙
+      SSH_PRIVATE_KEY: ${{ secrets.GITUSERKEY }} // 私匙
 
     steps:
       - name: Checkout
@@ -40,12 +40,12 @@ jobs:
       - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.gituserKey }}" > ~/.ssh/id_rsa
+          echo "${{ secrets.GITUSERKEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan ${{ env.IP }} >> ~/.ssh/known_hosts
           echo "-----------------------------------------------"
           echo "SSH Key print"
-          echo "secrets.githubKey: ${{ secrets.gituserKey }}"
+          echo "secrets.githubKey: ${{ secrets.GITUSERKEY }}"
           echo "-----------------------------------------------"
           ls ./
           echo "-----------------------------------------------"
@@ -57,7 +57,7 @@ jobs:
         run: |
           echo "-----------------------------------------------"
           echo "SSH Key print"
-          echo "secrets.githubKey: ${{ secrets.gituserKey }}"
+          echo "secrets.githubKey: ${{ secrets.GITUSERKEY }}"
           echo "-----------------------------------------------"
           ls ./
           echo "-----------------------------------------------"
