更换方法，用密码登录SSH

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     env: # 在这里定义环境变量
       USER_NAME: gituser
+      PWD: ${{ secrets.GITUSERPWD }}
       IP: 60.188.247.209
       SSH_PRIVATE_KEY: ${{ secrets.GITUSERKEY }} // 私匙
 
@@ -37,35 +38,45 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.GITUSERKEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan ${{ env.IP }} >> ~/.ssh/known_hosts
-          echo "-----------------------------------------------"
-          echo "SSH Key print"
-          echo "secrets.githubKey: ${{ secrets.GITUSERKEY }}"
-          echo "-----------------------------------------------"
-          ls ./
-          echo "-----------------------------------------------"
-          ls ~/
-          echo "-----------------------------------------------"
-          ls ~/.ssh
 
-      - name: 部署到天翼云
-        run: |
-          echo "-----------------------------------------------"
-          echo "SSH Key print"
-          echo "secrets.githubKey: ${{ secrets.GITUSERKEY }}"
-          echo "-----------------------------------------------"
-          ls ./
-          echo "-----------------------------------------------"
-          ls ~/
-          echo "-----------------------------------------------"
-          ls ~/.ssh
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ env.USER_NAME }}@${{ env.IP }} "echo 'SSH connection successful'"
+        - name: Checkout code
+        uses: actions/checkout@v2
+
+        - name: Setup SSH
+          run: |
+            sudo apt-get update
+            sudo apt-get install -y sshpass
+            sshpass -p "${{ env.PWD }}" scp -o StrictHostKeyChecking=no -r ./ ${{ env.USER_NAME }}@${{ env.IP }}:/www/wwwroot/
+
+      # - name: Setup SSH
+      #   run: |
+      #     mkdir -p ~/.ssh
+      #     echo "${{ secrets.GITUSERKEY }}" > ~/.ssh/id_rsa
+      #     chmod 600 ~/.ssh/id_rsa
+      #     ssh-keyscan ${{ env.IP }} >> ~/.ssh/known_hosts
+      #     echo "-----------------------------------------------"
+      #     echo "SSH Key print"
+      #     echo "secrets.githubKey: ${{ secrets.GITUSERKEY }}"
+      #     echo "-----------------------------------------------"
+      #     ls ./
+      #     echo "-----------------------------------------------"
+      #     ls ~/
+      #     echo "-----------------------------------------------"
+      #     ls ~/.ssh
+
+      # - name: 部署到天翼云
+      #   run: |
+      #     echo "-----------------------------------------------"
+      #     echo "SSH Key print"
+      #     echo "secrets.githubKey: ${{ secrets.GITUSERKEY }}"
+      #     echo "-----------------------------------------------"
+      #     ls ./
+      #     echo "-----------------------------------------------"
+      #     ls ~/
+      #     echo "-----------------------------------------------"
+      #     ls ~/.ssh
+      #     ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ env.USER_NAME }}@${{ env.IP }} "echo 'SSH connection successful'"
 
 
 
-          scp -r ./* ${{ env.USER_NAME }}@${{ env.IP }}:/www/wwwroot/alooooha.com
+      #     scp -r ./* ${{ env.USER_NAME }}@${{ env.IP }}:/www/wwwroot/alooooha.com
