--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,5 +43,4 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y sshpass
-          sshpass -p "${{ env.PWD }}" scp -o StrictHostKeyChecking=no -r ./ ${{ env.USER_NAME }}@${{ env.IP }}:${{ env.TARGET }}
-          # rsync -avz --progress ./ ${{ env.USER_NAME }}@${{ env.IP }}:${{ env.TARGET }}
+          sshpass -p "${{ env.PWD }}" rsync -avz --progress -e "ssh -o StrictHostKeyChecking=no" ./ ${{ env.USER_NAME }}@${{ env.IP }}:${{ env.TARGET }}
