--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,5 +42,5 @@ jobs:
       - name: Setup SSH
         run: |
           sudo apt-get update
-          sudo apt-get install -y sshpass
+          sudo apt-get install -y sshpass rsync
           sshpass -p "${{ env.PWD }}" rsync -avz --progress -e "ssh -o StrictHostKeyChecking=no" ./ ${{ env.USER_NAME }}@${{ env.IP }}:${{ env.TARGET }}
